[tool.poetry]
name = "coronavirus_mapper"
version = "0.1.0"
description = "https://github.com/code-to-learn/coronavirus_mapper.git"
authors = ["code-to-learn <bijaykumar019@gmail.com>"]
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
autopep8 = "^1.5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
